<resources>
    <string name="app_name">WheaterTaufiq</string>
    <string name="search_by_your_city">Search by your city</string>
    <string name="weather">Weather</string>
    <string name="desc">Desc:</string>
    <string name="country">Country</string>
    <string name="search">Search</string>
    <string name="celcius">%1$,.0f°C</string>
    <string name="wind_speed">%1$,.0f km/h</string>
    <string name="visibility_persen">%d km</string>
    <string name="feels_like">Feels Like:</string>
    <string name="wind">Wind:</string>
    <string name="flag_image_identity">Flag image identity</string>
    <string name="visibility">Visibility:</string>
    <string name="location_icon">location icon</string>
</resources>